tests/syntactic/qualifiers/qualifiers.err
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 14
.decl E(x:number, y:number) brie brie 
---------------------------------^-----
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 15
.decl F(x:number, y:number) brie btree 
---------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 16
.decl G(x:number, y:number) brie eqrel
---------------------------------^-----
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 17
.decl H(x:number, y:number) brie hashmap 
---------------------------------^--------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 18
.decl I(x:number, y:number) btree brie 
----------------------------------^-----
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 19
.decl J(x:number, y:number) btree btree 
----------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 20
.decl K(x:number, y:number) btree eqrel 
----------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 21
.decl M(x:number, y:number) btree hashmap 
----------------------------------^--------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 22
.decl N(x:number, y:number) eqrel brie 
----------------------------------^-----
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 23
.decl O(x:number, y:number) eqrel btree 
----------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 24
.decl P(x:number, y:number) eqrel eqrel 
----------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 25
.decl Q(x:number, y:number) eqrel hashmap 
----------------------------------^--------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 26
.decl R(x:number, y:number) hashmap brie 
------------------------------------^-----
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 27
.decl S(x:number, y:number) hashmap btree 
------------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 28
.decl T(x:number, y:number) hashmap eqrel 
------------------------------------^------
Error: btree/brie/eqrel/hashmap qualifier already set in file qualifiers.dl at line 29
.decl U(x:number, y:number) hashmap hashmap 
------------------------------------^--------
16 errors generated, evaluation aborted
