tests/syntactic/qualifiers/qualifiers.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2016, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

.decl A(x:number, y:number) eqrel
A(1,2).
.decl B(x:number, y:number) btree 
B(1,2).
.decl C(x:number, y:number) brie 
C(1,2).
.decl D(x:number, y:number) hashmap 
.decl E(x:number, y:number) brie brie 
.decl F(x:number, y:number) brie btree 
.decl G(x:number, y:number) brie eqrel
.decl H(x:number, y:number) brie hashmap 
.decl I(x:number, y:number) btree brie 
.decl J(x:number, y:number) btree btree 
.decl K(x:number, y:number) btree eqrel 
.decl M(x:number, y:number) btree hashmap 
.decl N(x:number, y:number) eqrel brie 
.decl O(x:number, y:number) eqrel btree 
.decl P(x:number, y:number) eqrel eqrel 
.decl Q(x:number, y:number) eqrel hashmap 
.decl R(x:number, y:number) hashmap brie 
.decl S(x:number, y:number) hashmap btree 
.decl T(x:number, y:number) hashmap eqrel 
.decl U(x:number, y:number) hashmap hashmap 

.output A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U
